      which had previously provided only an Event content type.  Thanks to
      Andy Dawkins for the work.

    - Updated FS-based skin methods to read optional '.security files,
      whcih control the role-permission mappings for each skin method.
      See CMFCore/tests/fake_skins/fake_skin/test4.py.security for an
      example.

  Bugs Fixed

    - Fixed addtoFavorites to correctly add a favorite of someone else's
      document (Tracker #501).

    - Fixed CatalogTool to create a meta_type index; this is needed now
      that ZCatalog doesn't create any default indexes when
      instantiated.

    - Fixed recent_news to use 'Title' instead of 'title' to display the
      title of each news ('title' isn't indexed anymore).

    - Fixed listFolderContents to take into account its optional 'spec'
      argument.

    - Fixed index_html to correctly filter out unauthorized subfolders
      (Tracker #503).

    - Fixed exception handling to not use a string exception in
      PortalFolder (Tracker #512).

    - Changed the permission protecting the "Join" action provided by
      the default registration tool from "View" to "Add portal member"
      (Tracker #509).

    - Removed redundant "Syndication" action from SkinnedFolder; the
      SyndicationTool provides this aciton. (Tracker #481)

    - Updated INSTALL.txt to note the dependency of CMF on the TAL and
      ZTUtils packages and on the PageTemplates product for Zopes < 2.5.
      (Tracker #489).

    - Updated CatalogTool to create a Vocabulary if none present (as
      won't be for catalogs created under Zope 2.6).

    - Adapted interface checks to work with new spellings in Zope 2.6
      (older Zopes should still work).

    - Removed '##bind' headers from FSPythonScripts where they only
      repeat the defaults.

    - Corrected patterns used for "HTML body stripping" to avoid
      HTML embedded within structured text.

    - Fixed computed action of form in 'folder_rename_form' (Tracker #511;