@@ -47,6 +47,10 @@ CMF 1.3 beta2 (2002/06/30)
 
   Bugs Fixed
 
+    - Fixed CMFDefault.RegistrationTool to correctly check the lack of
+      'email' property when creating a new member or when checking
+      member's properties validity (Tracker #508).
+
     - Fixed addtoFavorites to correctly add a favorite of someone else's
       document (Tracker #501).
 
